# Awful

./: .gitignore  Algebra.awf  Algebra.test  Algebra_Tests.awf  Algebra_tests.awf  Awful.cabal  Awful.hs  Build.hs  Complex.awf  Container.awf  Data.awf  Dictionary.hs  Either.awf  Errors.hs  Eval.hs  Field.awf  Files.hs  Finite.awf  Language.test  Language_tests.awf  List.awf  Logical.awf  Maybe.awf  Modular.hs  Naming.hs  Ord.awf  Pair.awf  Parser.hs  Promotion.awf  Promotion_tests.awf  Ring.awf  Standard.awf  Standard.hs  Standard.test  Standard_tests.awf  Test.hs  Testing.awf  Tokenise.hs  Tokens.hs  Transf.hs  (+8 more)
Awful/: Core.hs  Errors.hs  Eval.hs  Main.hs  Modular.hs  Namechecker.hs  Operators.hs  Parser.hs  Tokeniser.hs  Typechecker.hs
